<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/white"
   android:id="@+id/drawer_menu" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/dashboard"
            android:icon="@drawable/homeiconn"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/usericon"/>
        <item
            android:id="@+id/nav_purchase"
            android:title="@string/purchases"
            android:icon="@drawable/shopping_cart" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon"/>
    </group>
    <group android:id="@+id/group_bottom">
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out"
            android:icon="@drawable/signout_icon" />
    </group>
</menu>
