<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav_menu"
    android:background="@android:color/holo_blue_dark">

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/homeiconn"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/air_quality"
        android:icon="@drawable/airicon"
        android:title="@string/air_quality" />
    <item
        android:id="@+id/bi_directional"
        android:icon="@drawable/power"
        android:title="@string/bi_directional" />
    <item
        android:id="@+id/light"
        android:icon="@drawable/smartlighticon"
        android:title="@string/light" />
    <item
        android:id="@+id/presence"
        android:icon="@drawable/detection_on"
        android:title="@string/presence" />

</menu>